<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yncat</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="map_key">0YJ7RMxvssq_fFV0GpzVjjnn-empnTCfBVFdbsA</string>
    <string name="bmapa">Mapa Bien</string>
    <string name="toast_msg_location">Localizado en... </string>
    <string name="bfoto">Foto</string>
        <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    
    <string name="textbtnpref">Preferencias</string>
    <string name="pref_color">colormap</string>
    <string name="pref_zoom">zoom</string> 
    <string name="pref_name">Nombre</string>
    <string name="pref_tittle_color">¿De que color desea que sean sus pasos?</string>
    <string name="pref_tittle_zoom">Elija el zoom del mapa(de 1 a 21)</string>
    <string name="pref_tittle">Preferencias</string>   
    <string name="btn_red">Rojo</string>
    <string name="btn_blue">Azul</string>
    <string name="btn_yellow">Amarillo</string>
    <string name="btn_black">Negro</string>
    <string name="btn_save_zoom">Guardar zoom</string>
    <string name="color_change">El color se ha cambiado correctamente</string>
    <string name="msg_zoom_invalid">Valor de zoom invalido: numeros entre 1 y 21</string>
    <string name="msg_zoom_ok">Valor de zoom cambiado</string>
    <string name="tbhashtag">Hashtag</string>
   <string name="search">Cadena de busqueda</string>
   <string name="msg_error_busqueda">Debe rellenar el campo  de cadena de busqueda</string>
</resources>