<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
         >
	<Button 
	    android:id="@+id/btnmapa"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/bmapa"/>
	
	<Button
	    android:id="@+id/btnfoto"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/bfoto"/>

	<Button
	    android:id="@+id/btnpreferences"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/textbtnpref"/>
			
	  <ImageView 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content" 
      android:id="@+id/imageView1" />
</LinearLayout>
</LinearLayout>